--- a/faculty.html
+++ b/faculty.html
@@ -40,7 +40,7 @@
 			
 
 		
-			<nav class="navbar navbar-expand-lg fixed-top" style="background-color:white; height:12vh" >
+			<nav class="navbar navbar-expand-lg fixed-top">
 				<div class="container">
 
 					<a class="navbar-brand" style="padding:0px; height:10px" href="index.html">
