--- a/index.html
+++ b/index.html
@@ -275,10 +275,7 @@
 					<h3 style="font-weight:bolder; color:black;">We can give a text for your</h3>
 					<p style="font-weight:bolder; color:black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					quis  est laborum.</p>
 				   <button class="btn btn-success" style="display:block; margin:auto; font-size:20px">Click here</button>
 				</div>
 				</div>
