--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		  	width:80vw;
 		  	height:90vh;
 		  	margin:3vh auto;
-      background-image:url("images/baner.jpg");
+      background-image:url("img/bbb.jpg");
       background-color: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4));
       background-size:cover;
       background-repeat: no-repeat;
