--- a/contact.html
+++ b/contact.html
@@ -228,7 +228,7 @@
 			</div>
 		</section>
 					
-	 <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d57786.74716344858!2d75.80567908000744!3d25.146787880867755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x396f84db0597ad8f%3A0x7de5313f2ea73743!2sTalwandi%2C%20Kota%2C%20Rajasthan%20324005%2C%20India!3m2!1d25.1467143!2d75.8406988!5e0!3m2!1shi!2sin!4v1610759527113!5m2!1shi!2sin"  frameborder="0" style="border:0; width:60%; height:80vh; margin:0 10%" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3605.8782232352146!2d74.6372905140915!3d25.341867083829065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3968c3adb1ea63a7%3A0xec6908404d5ad62a!2sMkway%20Edubrain%20%7C%20IIT%20%7C%20NEET%20%7C%20JEE%20ADVANCED%20NTSE%20coaching%20institute%20in%20bhilwara!5e0!3m2!1sen!2sin!4v1611565724303!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		<!-- End contact-info section -->
 
 		<!-- footer 
