--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 			<div class="col-12 col-lg-4">
 				<div class="f">
 					
-				       <form action="" method="post" style="margin-top:14vh">
-					     <h1 style="text-align:center; color:#BE3437; font-weight:bold">Apply Now</h1>
+				       <form action="" method="post">
+					     <h1 style="text-align:center; color:#BE3437; font-weight:bold">APPLY NOW</h1>
 							<div class="form-group">
 								
 								<label>Please enter your name</label>
