--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 		  	margin:3vh auto;
       background-image:url("img/bbb.JPG");
 
-      opacity: 0.4;
+      opacity: 0.7;
       background-size:cover;
       background-repeat: no-repeat;
 
     }
     .jumbotron .text{
     	padding:10px;
-    	background:rgba(255,255,255,0.3);
+    	background:rgba(255,255,255,0.7);
     	color:#000;
 
-    	opacity: 1;
+    	
     	box-shadow: 15px 15px 5px black;
     	border-radius: 10px;
 
@@ -260,12 +260,8 @@
 			<div class="innerslider">
 				<div class="jumbotron text-white">
 					<div class="text">
-					<h1 style="font-weight: bolder; color:black">We are here to inform you</h1>
-					<h3 style="font-weight:bolder; color:black;">We can give a text for your</h3>
-					<p style="font-weight:bolder; color:black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis  est laborum.</p>
-				   <button class="btn btn-success" style="display:block; margin:auto; font-size:20px">Click here</button>
+					<h1 style="font-weight: bolder; color:black; text-align:center">We make dreams come true at Mkway</h1>
+					
 				</div>
 				</div>
 			</div>
@@ -716,10 +712,10 @@
 		 	      <div class="col-lg-12 col-12">
                        <div class="social-icon">
 							<ul>
-								<li><a href="#" class="facebook"><i class="fab fa-4x fa-facebook-f"></i></a></li>
-								<li><a href="#" class="twitter"><i class="fab fa-4x fa-twitter"></i></a></li>
-								<li><a href="#" class="google"><i class="fab fa-4x fa-google-plus-g"></i></a></li>
-								<li><a href="#" class="linkedin"><i class="fab fa-4x fa-linkedin"></i></a></li>
+								<li><a href="#" class="facebook"><i class="fab  fa-facebook-f"></i></a></li>
+								<li><a href="#" class="twitter"><i class="fab  fa-twitter"></i></a></li>
+								<li><a href="#" class="google"><i class="fab fa-google-plus-g"></i></a></li>
+								<li><a href="#" class="linkedin"><i class="fab  fa-linkedin"></i></a></li>
 							</ul>
 				       </div>
 			       </div>
