--- a/vijetaj.html
+++ b/vijetaj.html
@@ -379,11 +379,11 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
                <div class="row">
                   <div class="col-lg-12 col-12">
                        <div class="social-icon">
-                            <ul>
-                                <li><a href="#" class="facebook"><i class="fab fa-4x fa-facebook-f"></i></a></li>
-                                <li><a href="#" class="twitter"><i class="fab fa-4x fa-twitter"></i></a></li>
-                                <li><a href="#" class="google"><i class="fab fa-4x fa-google-plus-g"></i></a></li>
-                                <li><a href="#" class="linkedin"><i class="fab fa-4x fa-linkedin"></i></a></li>
+                                                       <ul>
+                                <li><a href="#" class="facebook"><i class="fab  fa-facebook-f"></i></a></li>
+                                <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#" class="google"><i class="fab  fa-google-plus-g"></i></a></li>
+                                <li><a href="#" class="linkedin"><i class="fab  fa-linkedin"></i></a></li>
                             </ul>
                        </div>
                    </div>
