--- a/vijetaj.html
+++ b/vijetaj.html
@@ -92,9 +92,7 @@
                                     </ul>
                                     </li>
                                 </ul>
-                            <li>
-                                <a href="faculty.html">Faculty</a>
-                            </li>
+                           
 
                             <li><a href="contact.html">Contact</a></li>
                             <li class="drop-link">
@@ -159,10 +157,7 @@
                                         </ul>
                                     </li>
                                 </ul>
-                            <li>
-                                <a href="faculty.html"><i class="fas fa-users" style="margin-right:10px"></i>Faculty</a>
-                            </li>
-
+                           
                             <li><a href="contact.html"><i class="far fa-address-book" style="margin-right:10px"></i>Contact</a></li>
                             <li class="drop-link">
                                 <a href="about.html"><i class="fas fa-info-circle" style="margin-right:10px"></i>About Us</i></a>
@@ -379,11 +374,11 @@ year to utilise remaining time for preparation of IIT JEE.</h2>
                <div class="row">
                   <div class="col-lg-12 col-12">
                        <div class="social-icon">
-                                                       <ul>
-                                <li><a href="#" class="facebook"><i class="fab  fa-facebook-f"></i></a></li>
-                                <li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#" class="google"><i class="fab  fa-google-plus-g"></i></a></li>
-                                <li><a href="#" class="linkedin"><i class="fab  fa-linkedin"></i></a></li>
+                              <ul>
+                                <li><a href="#" class="facebook"><i class="fab fa-2x fa-facebook-f"></i></a></li>
+                                <li><a href="#" class="twitter"><i class="fab fa-2x fa-twitter"></i></a></li>
+                                <li><a href="#" class="google"><i class="fab fa-2x fa-google-plus-g"></i></a></li>
+                                <li><a href="#" class="linkedin"><i class="fab fa-2x fa-linkedin"></i></a></li>
                             </ul>
                        </div>
                    </div>
