--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html lang="en" class="no-js">
 <head>
-	<title>MkWay</title>
+	<title>MkWay EduBrain</title>
 
 	<meta charset="utf-8">
 
@@ -228,19 +228,19 @@
 					     <h1 style="text-align:center; color:#BE3437; font-weight:bold">APPLY NOW</h1>
 							<div class="form-group">
 								
-								<label>Please enter your name</label>
+								<label>Name</label>
 								<input type="text" name="n1" class="form-control">
 							</div>
 							<div class="form-group">
-								<label>Please enter your email</label>
+								<label>Email</label>
 								<input type="email" name="n2" class="form-control">
 							</div>
 							<div class="form-group">
-								<label>Please enter number</label>
+								<label>Phone</label>
 								<input type="text" name="n4" class="form-control">
 							</div>
 							<div class="form-group">
-								<label>Please enter your query</label>
+								<label>Query</label>
                                 <textarea class="form-control" name="n4" id="textarea"></textarea>
 							</div>
 							<div class="form-group" style="display:flex; justify-content: center;">
@@ -255,7 +255,7 @@
 			<div class="innerslider">
 				<div class="jumbotron text-white">
 					<div class="text">
-					<h1 style="font-weight: bolder; color:black; text-align:center">We make dreams come true at Mkway</h1>
+					<h1 style="font-weight: bolder; color:black; text-align:center">We Make Dreams Come True at MkWay EduBrain</h1>
 					
 				</div>
 				</div>
