--- a/vinay.html
+++ b/vinay.html
@@ -3,7 +3,7 @@
 
 <html lang="en" class="no-js">
 <head>
-    <title>MkWay</title>
+    <title>MkWay EduBrain</title>
 
     <meta charset="utf-8">
 
