--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			<div class="innerslider">
 				<div class="jumbotron text-white">
 					<div class="text">
-					<h1 style="font-weight: bolder; color:black; text-align:center">We Make Dreams Come True at MkWay EduBrain</h1>
+					<h1 style="font-weight: bolder; color:black; text-align:center">We Make Dreams Come True at<br> <span style="font-family: Arial, Helvetica, sans-serif;"><b> MkWay EduBrain</b></span></h1>
 					
 				</div>
 				</div>
