--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="container">
 
 					<a class="navbar-brand" style="padding:0px; height:10px" href="index.html">
-						<img src="img/logo/headerlogo.png"  style="width:170px; margin-top:-12px" alt="">
+						<img src="img/logo/logo.jpg"  style="width:170px; margin-top:-12px" alt="">
 					</a>
 
 					<a href="#" class="mobile-nav-toggle"> 
@@ -647,7 +647,7 @@
 
 						<div class="col-lg-4 col-12" id="part1">
 							<div class="footer-widget text-widget">
-								<a href="index.html" class="footer-logo"><img src="img/logo/footerlogo.png" style="width:250px;" alt=""></a>
+								<a href="index.html" class="footer-logo"><img src="img/logo/logo.jpg" style="width:250px;" alt=""></a>
 								<p style="text-align:justify; color:#fff">A premier coaching institute for the preparation of JEE (Main+Advanced), JEE (Main), Pre-Medical (NEET-UG), Pre-Nurture & Career Foundation (Class VI to X, NTSE & Olympiads). The Institute is well regarded for the high quality entrance exams preparation and produces best results year after year</p>
 							</div>
 						</div>
